# eks-obs

./: .gitignore  Dockerfile  Makefile  README.md  app.py  gunicorn.conf.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cd.yaml
kubernetes/: .terraform.lock.hcl  backend.tf  config.alloy  flask-deployment.yaml  flask-service.yaml  hpa.yaml  main.tf  providers.tf  terraform.tf  variables.tf
tf/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  providers.tf  terraform.tf  variables.tf
